terraform-code/dev/account-3666/us-east4/geotrade-app/gke/central-new-dev/redis/redis/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/auth-type: "basic"   
    # ingress.kubernetes.io/auth-secret: "pass"
spec:
  rules:
  - host: redis.35.199.37.53.nip.io 
    http:
      paths:
        - path: /
          backend:
            serviceName: geotrade-redis-master
            servicePort: 6379
